Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-57347

[macOS] button doesn't click when having preedit string in line edit and text edit

XMLWordPrintable

    • macOS
    • c67f46877c72d1c04cb643f33e820d86e64128d1 (qt/qtbase/dev) 0b50fa57ca8e92b661b962d7d2fdc6aaabf92ae5 (qt/qtbase/6.2)

      Steps to reproduce the issue:
      1. Change macOS Input Source to Korean
      2. Launch attached test application
      3. Type some text and click on the button

      Expected outcome:
      Button click event goes through

      Actual outcome:
      Only the second click event is going through

      Tested on macOS 10.11.6

        1. test2.tar.gz
          0.7 kB
        2. button not clicked.mp4
          6.35 MB
        3. QTBUG-57347.tar.gz
          1 kB
        4. Compared_562_and_5152.mov
          1.26 MB
        For Gerrit Dashboard: QTBUG-57347
        # Subject Branch Project Status CR V

            vestbo Tor Arne Vestbø
            kileppal Kimmo Leppälä
            Veli-Pekka Heinonen Veli-Pekka Heinonen
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: